// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render nothing when items is empty 1`] = `
<div>
  {}
</div>
`;

exports[`should render nothing when items is null 1`] = `null`;

exports[`should render nothing when items is undefined 1`] = `null`;

exports[`should render reduced items is when items is not empty 1`] = `
<div>
  {"1":1,"2":2}
</div>
`;
